--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "node --watch index.js"
   },
-  "author": "",
-  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/luks370/cac-donaciones-libros-back.git"
+  },
+  "author": "Grupo-24",
+  "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.2"
   }
 }
